更新推送 TSLInt检测机制 代码质量管控

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- 快捷导航 -->
 <cnet-core-toolbar></cnet-core-toolbar>
 <!-- 护眼模式 -->
-<cnet-eye-care-mode *ngIf="settingConfig.eyeCareMode"></cnet-eye-care-mode>
+<swipe-eye-care-mode *ngIf="settingConfig.eyeCareMode"></swipe-eye-care-mode>
 <!-- APP内路由 -->
 <ion-app
   (touchmove)="globalTouchMoveEvent($event)"
