--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -11,11 +11,12 @@ $default_color_4: #666666;
 $default_color_5: #FAFAFA;
 $default_color_6: #E5E5E5;
 
-$default_background_color: #e4e4e4;
-$default_border_color: #E5E5E5;
+$default_background_color: #F5F7FA;
+$default_border_color: #DCDFE6FF;
+$default_placeholder: #909399;
 
 $bgColors: #F4F4F4;
-$bgColorBtn: #F5E267;
+$bgColorBtn: #0486FEFF;
 $bgColorsing: #F15A32;
 $bgColorsed: #24A4FF;
 $bgColorserr: #999999;
