--- a/src/app/pages/account/login/login.page.html
+++ b/src/app/pages/account/login/login.page.html
@@ -4,29 +4,19 @@
       <h3 class="title-text">欢迎登录</h3>
     </header>
     <section class="form-model">
-
-    </section>
-    <!-- <header class="info-text">
-      <h3 class="tip">验证码登录</h3>
-      <p class="info">若该手机号未注册，系统将自动注册</p>
-    </header>
-    <section class="form-model">
-      <section class="form-item">
-        <span class="unit">+86</span>
-        <ion-input pattern="^1[3|4|5|6|7|8|9][0-9]{9}$" type="tel" class="phone" [(ngModel)]="loginForm.phone" [value]="loginForm.phone" placeholder="请输入手机号码" [maxlength]="11"></ion-input>
-        <ion-icon *ngIf="loginForm.phone" (click)="clearInputChange('phone')" class="clear" src="/assets/svgs/public/min-icon/cnet_min_icon_clear_input_close@2x.svg"></ion-icon>
+      <section class="custom-input">
+        <swipe-input [(value)]="loginForm.phone" type="text" placeholder="请输入您的账号" [pattern]="'^[0-9]*$'" [isClear]="true" [isRequired]="false"></swipe-input>
       </section>
-      <section class="form-item">
-        <ion-input type="number" class="code" [(ngModel)]="loginForm.verificationCode" [value]="loginForm.verificationCode" placeholder="请输入验证码" [maxlength]="6"></ion-input>
-        <span class="code-btn" *ngIf="!getCodeStatus" (click)="fetchCodeEvent()">获取验证码</span>
-        <span class="code-btn" *ngIf="getCodeStatus">{{timeOut}}s后重新获取</span>
-      </section>
-      <section class="form-tip">
-        <span class="tip-info" *ngIf="getCodeStatus">验证码已发送，可能会有延后请耐心等待</span>
+      <section class="custom-input">
+        <swipe-input [(value)]="loginForm.password" type="password" placeholder="请输入您的密码" [isClear]="true"></swipe-input>
       </section>
     </section>
-    <section class="submit-form">
-      <ion-button class="submit-btn" (click)="submitChange()">提交</ion-button>
-    </section> -->
+    <section class="submit-info">
+      <ion-button class="submit-btn" expand="block" color="primary">登录</ion-button>
+    </section>
+    <section class="other-info">
+      <span class="label-text" (click)="openRegisterPage()">注册新账号</span>
+      <span class="label-text" (click)="openForgotPasswordPage()">忘记密码</span>
+    </section>
   </section>
 </ion-content>
