--- a/src/app/pages/account/login/login.page.html
+++ b/src/app/pages/account/login/login.page.html
@@ -12,7 +12,7 @@
       </section>
     </section>
     <section class="submit-info">
-      <ion-button class="submit-btn" expand="block" color="primary">登录</ion-button>
+      <ion-button class="submit-btn" expand="block" color="primary" (click)="submitChange()">登录</ion-button>
     </section>
     <section class="other-info">
       <span class="label-text" (click)="openRegisterPage()">注册新账号</span>
