--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -11,6 +11,14 @@ $default_color_4: #666666;
 $default_color_5: #FAFAFA;
 $default_color_6: #E5E5E5;
 
+$default_color_7: #E6F1FC;
+$default_color_8: #F4FFEF;
+
+$default_color_7_border: #A3D0FD;
+$default_color_8_border: #C4F5AB;
+
+$default_color_9: #C0C4CC;
+
 $default_background_color: #F5F7FA;
 $default_border_color: #DCDFE6FF;
 $default_placeholder: #909399;
