--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,7 +8,7 @@
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
+  --ion-color-primary-shade: #A3D0FD;
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
@@ -28,12 +28,12 @@
   --ion-color-tertiary-tint: #6370ff;
 
   /** success **/
-  --ion-color-success: #2dd36f;
+  --ion-color-success: #67C23A;
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
+  --ion-color-success-shade: #C4F5AB;
+  --ion-color-success-tint: #050505;
 
   /** warning **/
   --ion-color-warning: #ffc409;
