更新所有界面

--- a/src/app/pages/carte/carte.component.html
+++ b/src/app/pages/carte/carte.component.html
@@ -4,7 +4,7 @@
   </swipe-header>
 </ion-header>
 
-<ion-content class="carte-page" id="main">
+<ion-content class="carte-page" id="carte-main">
   <section class="carte-container">
     <ion-header class="carte-header">
       <swipe-steps></swipe-steps>
@@ -16,7 +16,7 @@
 </ion-content>
 
 <!-- 侧窗 -->
-<ion-menu class="custom-side-menu" side="end" type="push" contentId="main">
+<ion-menu class="custom-side-menu" menuId="carte" side="end" type="push" contentId="carte-main">
   <ion-header>
     <ion-toolbar>
       <ion-title>选择名片</ion-title>
