--- a/src/app/tabs/upcoming/upcoming.component.html
+++ b/src/app/tabs/upcoming/upcoming.component.html
@@ -4,7 +4,7 @@
   </swipe-header>
 </ion-header>
 
-<ion-content class="upcoming-page" id="main">
+<ion-content class="upcoming-page" id="upcoming-main">
   <section class="upcoming-container">
     <!-- 操作类 -->
     <section class="tools-info">
@@ -28,7 +28,7 @@
 </ion-content>
 
 <!-- 侧窗 -->
-<ion-menu class="custom-side-menu" side="end" type="push" contentId="main">
+<ion-menu class="custom-side-menu" menuId="upcoming" side="end" type="push" contentId="upcoming-main">
   <ion-header>
     <ion-toolbar>
       <ion-title>选择名片</ion-title>
