更新用户端接口

--- a/src/app/core/modules/components/swipe-input/swipe-input.component.html
+++ b/src/app/core/modules/components/swipe-input/swipe-input.component.html
@@ -13,6 +13,7 @@
       [placeholder]="placeholder"
       [maxlength]="maxLength"
       [minlength]="minLength"
+      [disabled]="disabled"
       (ngModelChange)="inputChange($event)"
       (focus)="inputFocusChange($event)"
       (blur)="inputBlurChange($event)"
