--- a/src/app/pages/user/change-pwd/change-pwd.page.html
+++ b/src/app/pages/user/change-pwd/change-pwd.page.html
@@ -5,13 +5,13 @@
 <ion-content class="change-pdw-page">
   <section class="form-model">
     <section class="custom-input">
-      <swipe-input [(value)]="registerForm.old_password" type="password" placeholder="请输入原密码" [isClear]="true"></swipe-input>
+      <swipe-input [(ngModel)]="registerForm.old_password" type="password" placeholder="请输入原密码" [isClear]="true"></swipe-input>
     </section>
     <section class="custom-input">
-      <swipe-input [(value)]="registerForm.password" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
+      <swipe-input [(ngModel)]="registerForm.password" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
     </section>
     <section class="custom-input">
-      <swipe-input [(value)]="registerForm.check_password" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
+      <swipe-input [(ngModel)]="registerForm.check_password" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
     </section>
   </section>
   <section class="submit-info">
