--- a/src/app/pages/account/forgot-pwd/forgot-pwd.page.html
+++ b/src/app/pages/account/forgot-pwd/forgot-pwd.page.html
@@ -5,12 +5,12 @@
     </header>
     <section class="form-model">
       <section class="custom-input">
-        <swipe-input [(value)]="registerForm.phone" type="number" placeholder="请输入手机号" [isClear]="true"></swipe-input>
+        <swipe-input [(ngModel)]="registerForm.phone" type="number" placeholder="请输入手机号" [isClear]="true"></swipe-input>
       </section>
       <section class="custom-input">
         <swipe-input
           type="number"
-          [(value)]="registerForm.code"
+          [(ngModel)]="registerForm.code"
           placeholder="请输入验证码"
           [maxLength]="6"
           [isClear]="true"
@@ -20,10 +20,10 @@
         </swipe-input>
       </section>
       <section class="custom-input">
-        <swipe-input [(value)]="registerForm.password" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
+        <swipe-input [(ngModel)]="registerForm.password" type="password" placeholder="请输入登录密码" [isClear]="true"></swipe-input>
       </section>
       <section class="custom-input">
-        <swipe-input [(value)]="registerForm.check_password" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
+        <swipe-input [(ngModel)]="registerForm.check_password" type="password" placeholder="请重新输入密码" [isClear]="true"></swipe-input>
       </section>
     </section>
     <section class="submit-info">
