--- a/src/app/tabs/task/task.component.html
+++ b/src/app/tabs/task/task.component.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-header class="custom-tab-info">
-  <ion-segment class="custom-segment" (ionChange)="segmentChanged($event)" value="action-1">
+  <ion-segment class="custom-segment" (ionChange)="segmentChanged($event)" [(ngModel)]="taskRenderConfig.status">
     <ion-segment-button class="custom-segament-button" *ngFor="let item of tabConfig" [value]="item.value">
       <ion-label class="custom-sty">{{item.label}}({{item.number}})</ion-label>
     </ion-segment-button>
@@ -25,18 +25,12 @@
     <!-- 任务列表 -->
     <ion-list class="task-info">
       <section class="task-info-item">
-        <swipe-task-info-cell [isCustomHandler]="true">
+        <swipe-task-info-cell *ngFor="let item of taskRenderList" [renderInfo]="item" [isCustomHandler]="true">
           <section class="custom-handler" name="customTemp">
-            <ion-button class="hand-view" (click)="openTaskInfoPage()">查看</ion-button>
+            <ion-button class="hand-view" (click)="openTaskInfoPage(item)">查看</ion-button>
             <ion-button class="cancel">取消</ion-button>
           </section>
         </swipe-task-info-cell>
-      </section>
-      <section class="task-info-item">
-        <swipe-task-info-cell></swipe-task-info-cell>
-      </section>
-      <section class="task-info-item">
-        <swipe-task-info-cell></swipe-task-info-cell>
       </section>
     </ion-list>
     <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
@@ -48,44 +42,4 @@
   </section>
 </ion-content>
 
-<!-- 侧窗 -->
-<ion-menu class="custom-side-menu" menuId="task" side="end" type="push" contentId="main">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>选择名片</ion-title>
-      <ion-buttons slot="primary">
-        <ion-button color="medium">
-          <ion-icon name="close-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content class="content-info">
-    <section class="platform-info">
-      <section class="platform-item" (click)="openPlatformPickerEvent($event)">
-        <span class="label-text">平台：</span>
-        <span class="value-text">淘宝</span>
-        <ion-icon class="icon-arrow" name="chevron-forward-outline"></ion-icon>
-      </section>
-      <section class="platform-item">
-        <span class="label-text">买号：</span>
-        <input class="code-input" type="text" placeholder="请输入要搜索的买号"/>
-      </section>
-    </section>
-    <section class="btn-group">
-      <ion-button color="primary" class="btn-search">查询</ion-button>
-      <ion-button class="btn-reset">清空</ion-button>
-    </section>
-    <ion-content>
-      <ion-list>
-        <swipe-business-card-info></swipe-business-card-info>
-      </ion-list>
-      <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-        <ion-infinite-scroll-content
-          loadingSpinner="bubbles"
-          loadingText="正在加载更多数据...">
-        </ion-infinite-scroll-content>
-      </ion-infinite-scroll>
-    </ion-content>
-  </ion-content>
-</ion-menu>
+<swipe-business-info (change)="businessChange($event)" [menuKey]="'main'" #swiperCustomMenu></swipe-business-info>
