--- a/src/app/pages/task/task-info/task-card/task-card.component.html
+++ b/src/app/pages/task/task-info/task-card/task-card.component.html
@@ -1,21 +1,22 @@
 <section class="task-card-component">
   <section class="header-info">
-    <span class="title-text">1、热身运动</span>
+    <span class="title-text">{{renderInfo.sort}}、{{renderInfo.title}}</span>
   </section>
   <section class="step-info">
     <section class="step-item">
       <span class="label-text">步骤奖励：</span>
-      <span class="value-text light">1元</span>
+      <span class="value-text light">{{renderInfo.commission}}元</span>
     </section>
-    <section class="step-item">
+    <section class="step-item" [ngSwitch]="renderInfo.refundType">
       <span class="label-text">返款时效：</span>
-      <span class="value-text">秒返</span>
+      <span class="value-text" *ngSwitchCase="1">下单立返</span>
+      <span class="value-text" *ngSwitchCase="2">收货后立返</span>
     </section>
   </section>
-  <section class="content-intro">
+  <section class="content-intro" *ngIf="renderInfo.description">
     <section class="min-title">
       <span class="title-text">任务说明</span>
     </section>
-    <article class="content-html">扫描二维码，点击任一宝贝，把看到的宝贝拍照上传。</article>
+    <article class="content-html" [innerHTML]="renderInfo.description"></article>
   </section>
 </section>
