--- a/src/app/pages/task/task-info/task-order/task-order.component.html
+++ b/src/app/pages/task/task-info/task-order/task-order.component.html
@@ -1,6 +1,6 @@
-<section class="task-order-component">
+<section class="task-order-component" *ngIf="renderInfo">
   <section class="header-info">
-    <span class="lable-text">编号：ST0059800006</span>
+    <span class="lable-text">编号：{{renderInfo.businessId}}</span>
   </section>
   <section class="basic-bord">
     <section class="min-title">
@@ -9,27 +9,31 @@
     <section class="group">
       <section class="item">
         <span class="label-text">任务本金：</span>
-        <span class="value-text light">100元</span>
+        <span class="value-text light">{{renderInfo.unitPrice}}元</span>
       </section>
       <section class="item">
         <span class="label-text">任务奖励：</span>
-        <span class="value-text light">100元</span>
+        <span class="value-text light">{{renderInfo.award}}元</span>
       </section>
       <section class="item">
         <span class="label-text">商家名片：</span>
-        <span class="value-text">七*星*袜</span>
+        <span class="value-text">{{renderInfo.shopTitle}}</span>
       </section>
       <section class="item">
-        <span class="label-text">商家名片：</span>
-        <span class="value-text">潇洒小王子</span>
+        <span class="label-text">买家名片：</span>
+        <span class="value-text">{{renderInfo.account}}</span>
       </section>
-      <section class="item">
+      <section class="item" [ngSwitch]="renderInfo.status">
         <span class="label-text">任务进度：</span>
-        <span class="value-text">已完成</span>
+        <span class="value-text" *ngSwitchCase="1">待开始</span>
+        <span class="value-text" *ngSwitchCase="2">进行中</span>
+        <span class="value-text" *ngSwitchCase="3">已完成</span>
+        <span class="value-text" *ngSwitchCase="4">已过期</span>
+        <span class="value-text" *ngSwitchCase="5">已锁定</span>
       </section>
       <section class="item">
         <span class="label-text">发布时间：</span>
-        <span class="value-text">2020-3-1 14：00</span>
+        <span class="value-text">{{renderInfo.createTime}}</span>
       </section>
     </section>
   </section>
