--- a/src/app/pages/user/data-authentication/data-authentication.page.html
+++ b/src/app/pages/user/data-authentication/data-authentication.page.html
@@ -11,7 +11,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入您的真实姓名"
           [isPrefix]="true"
@@ -27,7 +27,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入您的手机号码"
           [isPrefix]="true"
@@ -43,7 +43,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="男"
           [isPrefix]="true"
@@ -59,7 +59,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入您的QQ号码"
           [isPrefix]="true"
@@ -75,7 +75,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请选择您当前所在地址"
           [isPrefix]="true"
@@ -98,7 +98,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入与真实姓名对应的开户行"
           [isPrefix]="true"
@@ -114,7 +114,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入与真实姓名对应的银行卡号"
           [isPrefix]="true"
@@ -136,7 +136,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入支付宝账号"
           [isPrefix]="true"
@@ -158,7 +158,7 @@
       <section class="custom-input">
         <swipe-input
           type="text"
-          [(value)]="username"
+          [(ngModel)]="username"
           [isBorder]="false"
           placeholder="请输入微信账号"
           [isPrefix]="true"
