--- a/src/app/tabs/task/submit-rights/submit-rights.component.html
+++ b/src/app/tabs/task/submit-rights/submit-rights.component.html
@@ -15,15 +15,18 @@
     <!-- 任务列表 -->
     <ion-list class="submit-rights-info">
       <section class="submit-rights-info-item">
-        <swipe-task-info-cell [isCustomHandler]="true">
+        <swipe-task-info-cell [renderInfo]="_renderInfo" [isCustomHandler]="true">
           <section class="custom-handler" name="customTemp">
             <section class="handler-info">
               <span class="title-text">维权类型</span>
-              <article class="context-text">实际付款比平台多，要求补回</article>
+              <!-- <article class="context-text">实际付款比平台多，要求补回</article> -->
+              <ion-list>
+                <swipe-radio [(value)]="appealConfig.rightProtectionTypeId" [radioRender]="_appealTypesInfo"></swipe-radio>
+              </ion-list>
             </section>
             <section class="handler-info">
               <span class="title-text">备注说明</span>
-              <ion-textarea class="context-textarea" placeholder="请描述您的问题"></ion-textarea>
+              <ion-textarea [(ngModel)]="appealConfig.description" class="context-textarea" placeholder="请描述您的问题"></ion-textarea>
             </section>
             <section class="handler-info">
               <span class="title-text">上传截图</span>
@@ -33,9 +36,8 @@
         </swipe-task-info-cell>
       </section>
       <section class="submit-info">
-        <ion-button class="submit-btn" expand="block" color="primary">提交维权</ion-button>
+        <ion-button class="submit-btn" expand="block" color="primary" (click)="submitAppealInfo()">提交维权</ion-button>
       </section>
     </ion-list>
   </section>
 </ion-content>
-
