--- a/src/app/tabs/user/user.component.html
+++ b/src/app/tabs/user/user.component.html
@@ -18,6 +18,6 @@
     </section>
   </section>
   <section class="footer-btn">
-    <ion-button class="logout">退出登录</ion-button>
+    <ion-button class="logout" (click)="openSignOut()">退出登录</ion-button>
   </section>
 </ion-content>
